# fixundfertig

./: .dockerignore  .env.example  .gitignore  Caddyfile  DEPLOYMENT.md  Dockerfile  NOTES.md  README.md  copy.ps1  copy_project.sh  debug_pdf.py  deploy.tar  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  list_routes.py  n8n_log.txt  push_to_github.sh  pyproject.toml  requirements.txt  setup.sh  split.sh  start_native.ps1  start_native.sh  temp_code_export_state.json
.claude/: launch.json  settings.local.json
app/: Dockerfile  __init__.py  actions.py  auth_guard.py  backfill_legacy.py  data.py  db.py  env.py  invoice_calculations.py  invoice_customer_merge.py  invoice_numbering.py  logging_setup.py  logic.py  main.py  models.py  pages.py  pages_legacy_full.py  renderer.py  renderer_interface.py  requirements.txt  run_dev.py  services.py  style.css  styles.py  styles_css.py  ui_components.py  ui_theme.py  viewer.py  webhooks.py
docs/: DESIGN-TOKENS.md  audit.md  audit_ux.md  migration_react_plan.md  n8n_ingest_debugging.md  nginx_fixundfertig.conf  react_handoff.md
frontend/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
scripts/: split_pages.py
src/: __init__.py  main.py
tests/: test_actions.py  test_address_autocomplete.py  test_api_auth.py  test_api_auth_password.py  test_api_companies.py  test_api_customers.py  test_api_documents.py  test_api_documents_upload.py  test_api_expenses.py  test_api_exports.py  test_api_invites.py  test_api_invoice_relationships.py  (+18 more)
(+187 files in other folders)
