[project]
name = "fixundfertig"
version = "0.1.0"
description = "FixundFertig NiceGUI + FastAPI invoicing app"
requires-python = ">=3.11"
dependencies = [
  "boto3==1.42.24",
  "botocore==1.42.24",
  "cachetools==6.2.4",
  "fastapi==0.128.0",
  "fpdf2==2.8.5",
  "httpx==0.28.1",
  "nicegui==3.5.0",
  "pandas==2.3.3",
  "pydantic==2.12.5",
  "reportlab==4.4.7",
  "SQLAlchemy==2.0.45",
  "sqlmodel==0.0.31",
  "uvicorn",
  "redis",
]

[project.optional-dependencies]
test = ["pytest"]
lint = ["ruff"]
typecheck = ["mypy"]
